# SandHook_with_x86

./: .gitignore  settings.gradle
annotation/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nake/demo/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
sandhook/: build.gradle  proguard-rules.pro
sandhook/src/main/cpp/: CMakeLists.txt  sandhook.cpp
sandhook/src/main/cpp/Substrate/: And64InlineHook.cpp  SubstrateARM.hpp  SubstrateDebug.hpp  SubstrateHook.cpp  SubstrateHook.h  SubstrateLog.hpp  SubstratePosixMemory.cpp
sandhook/src/main/cpp/includes/: hide_api.h  log.h  trampoline.h
sandhook/src/main/cpp/inst/: insts_arm32.cpp  insts_arm64.cpp  insts_i386.cpp
sandhook/src/main/cpp/nativehook/: native_hook.cpp
sandhook/src/main/cpp/trampoline/: trampoline.cpp  trampoline_manager.cpp
sandhook/src/main/cpp/trampoline/arch/: i386.S
sandhook/src/main/cpp/utils/: hide_api.cpp  utils.cpp
sandhook/src/main/java/com/swift/sandhook/: ArtMethodSizeTest.java  ClassNeverCall.java  HookLog.java  PendingHookHandler.java  SandHook.java  SandHookConfig.java  SandHookMethodResolver.java
